@@ -1,0 +1,7 @@
+	.file	"getcallerpc-NetBSD-386.S"
+
+	.type	getcallerpc,@function
+	.global	getcallerpc
+getcallerpc:
+	movl	4(%ebp), %eax
+	ret
